# tts29

./: .gitignore  AGENTS.md  README.md  SKILL.md
agents/: openai.yaml
apple/: README.md
apple/Config/: Shared.xcconfig  Tests.xcconfig
apple/TTS29/: TTS29.xctestplan  TTS29App.swift
apple/TTS29.xcodeproj/: project.pbxproj
apple/TTS29.xcodeproj/xcshareddata/xcschemes/: TTS29.xcscheme
apple/TTS29.xcworkspace/: contents.xcworkspacedata
apple/TTS29Mac/: README.md
apple/TTS29Mac/Config/: Shared.xcconfig  Tests.xcconfig
apple/TTS29Mac/TTS29Mac/: TTS29MacApp.swift
apple/TTS29Mac/TTS29Mac.xcodeproj/: project.pbxproj
apple/TTS29Mac/TTS29Mac.xcworkspace/: contents.xcworkspacedata
apple/TTS29Package/: Package.swift
apple/TTS29Package/Sources/TTS29Feature/: AVPlayerBackend.swift  AccountModels.swift  AccountView.swift  AgentIdentity.swift  AttachmentPreview.swift  AttachmentsView.swift  ConnectionSettings.swift  ContentView.swift  Formatting.swift  GlassStyles.swift  IdentityViews.swift  KeychainCredentialVault.swift  MiniPlayerView.swift  NowPlayingCenter.swift  NowPlayingView.swift  PlaybackController+Transport.swift  PlaybackController.swift  QuestionsView.swift  (+10 more)
apple/TTS29UITests/: TTS29UITests.swift
contract/: Cargo.toml
contract/src/: lib.rs
core/: Cargo.toml
core/include/: tts29_core.h
core/src/: action.rs  clock.rs  identity.rs  lib.rs  model.rs  projection.rs  projection_tests.rs  runtime.rs  session.rs  session_tests.rs
core/src/protocol/: mod.rs
daemon/: Cargo.toml  example-config.json
daemon/src/: answer_wait.rs  answer_wait_tests.rs  blossom.rs  daemon_config.rs  daemon_identity.rs  group_bootstrap.rs  identity.rs  journal.rs  kokoro.rs  lib.rs  live_network.rs  live_smoke.rs  local_protocol.rs  local_server.rs  local_server_tests.rs  local_service.rs  model.rs  nmp_publisher.rs  nmp_receipt.rs  production.rs  production_tests.rs  request.rs  runner.rs  test_http.rs  test_nmp_relay.rs  test_publisher.rs  tests.rs
daemon/tests/: cli.rs
docs/: apple-playback.md  architecture.md  daemon-production.md  daemon-recovery.md  live-relay-verification.md  local-producer.md  migration.md  protocol.md  release-evidence.md  releases.md  remote-producer.md
mcp/: Cargo.toml  example-config.json
mcp/src/: auth.rs  config.rs  ingress.rs  lib.rs  main.rs  server.rs  tool.rs
mcp/tests/: config.rs  https_mcp.rs  oauth.rs
mcp/tests/support/: daemon.rs  mod.rs
producer-api/: Cargo.toml
producer-api/src/: lib.rs  model.rs  protocol.rs  unix_client.rs
protocol/: Cargo.toml
protocol/src/: answer.rs  compose.rs  group_admin.rs  lib.rs  membership.rs  model.rs  related.rs
protocol/src/parse/: mod.rs  tags.rs
references/: asking-questions.md  mcp.md  results-and-troubleshooting.md  rich-content.md  setup.md
scripts/: build-rust-ios.sh  build-rust-macos.sh  check-cutover.sh  check-release-readiness.sh  live-kokoro-fixture.py  run-live-relay-e2e.sh  setup  test-setup  test-tts-launcher  tts
(+5 files in other folders)
