[package]
name = "tts29-core"
version = "0.1.0"
edition = "2021"
license = "MIT"

[lib]
crate-type = ["rlib", "staticlib"]

[dependencies]
nmp = { git = "https://github.com/pablof7z/nmp.git", rev = "5135a36558786d857958347ce30314e39472d5ce" }
nmp-nip29 = { git = "https://github.com/pablof7z/nmp.git", rev = "5135a36558786d857958347ce30314e39472d5ce", features = ["engine"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
