[package]
name = "tts29-daemon"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
ctrlc = { version = "3", features = ["termination"] }
nmp = { git = "https://github.com/pablof7z/nmp.git", rev = "5135a36558786d857958347ce30314e39472d5ce" }
nmp-blossom = { git = "https://github.com/pablof7z/nmp.git", rev = "5135a36558786d857958347ce30314e39472d5ce" }
nmp-nip29 = { git = "https://github.com/pablof7z/nmp.git", rev = "5135a36558786d857958347ce30314e39472d5ce" }
reqwest = { version = "0.12.28", default-features = false, features = ["blocking", "json", "rustls-tls-webpki-roots"] }
rand_core = { version = "0.6", features = ["getrandom"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tokio = { version = "1", features = ["rt-multi-thread"] }
tts29-producer-api = { path = "../producer-api" }
tts29-protocol = { path = "../protocol" }

[dev-dependencies]
tempfile = "3"
tungstenite = "0.29"
