[package]
name = "tts29-mcp"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
axum = "0.8.8"
axum-server = { version = "0.8.0", features = ["tls-rustls"] }
http = "1"
jsonwebtoken = { version = "10.4.0", default-features = false, features = ["rust_crypto"] }
rmcp = { version = "2.2.0", features = ["transport-streamable-http-server"] }
schemars = "1.2.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "sync", "time"] }
tokio-util = "0.7"
tts29-producer-api = { path = "../producer-api" }
url = "2"

[dev-dependencies]
base64 = "0.22"
ed25519-dalek = { version = "2.2", features = ["pkcs8", "rand_core"] }
rand_core = { version = "0.6", features = ["getrandom"] }
rcgen = "0.14"
reqwest = { version = "0.13.4", default-features = false, features = ["json", "rustls"] }
rmcp = { version = "2.2.0", features = ["client", "transport-streamable-http-client-reqwest"] }
tempfile = "3"
